--- a/style.css
+++ b/style.css
@@ -9,27 +9,53 @@ body {
   margin: 0 auto;
 }
 
-h2 {
-  
-}
-
 #wrap {
   border-radius: 10px;
-  border: 1px solid black;
   background-color: #fff;
+  padding: 20px;
 }
-
 
 
 .grid {
-  display: flex;
-  flex-wrap: wrap;
-  width: 1000px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 20px;
+  width: 700px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
+
 .card {
-  width: 100px;
-  height: 100px;
-  border: 1px solid darkblue;
-  margin-right: 2px;
+  width: 150px;
+  height: 150px;
+  background-color: #fff;
+  border: 1px solid rgb(221, 221, 218);
+  border-radius: 10px;
+  cursor: pointer;
+
+  box-shadow: 0 1px 1px rgba(0,0,0,0.15), 
+              0 2px 2px rgba(0,0,0,0.15), 
+              0 4px 4px rgba(0,0,0,0.15), 
+              0 8px 8px rgba(0,0,0,0.15);
 }
+.card:hover {
+  transform: scale(1.1);
+}
+
+.check {
+  pointer-events: none;
+}
+
+.active {
+  pointer-events: none;
+  
+  border: 1px solid red;
+}
+
+
+/*
+todo : 카드 뒤집기 
+        hover 상태 꾸미기
+        전체적으로 디자인
+*/
