--- a/style.css
+++ b/style.css
@@ -3,10 +3,17 @@ body {
   margin: 0;
 }
 
+button {
+  border: none;
+}
+
 #container {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  margin-top: 30px;
+
+  width: 800px;
 }
 
 #wrap {
@@ -15,8 +22,12 @@ body {
   padding: 20px;
 }
 
+h2 {
+  color: rgb(179, 86, 86);
+}
 
 .grid {
+  margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   row-gap: 20px;
@@ -41,6 +52,7 @@ body {
 }
 .card:hover {
   transform: scale(1.1);
+  transition: all 0.5s;
 }
 
 .check {
@@ -49,8 +61,7 @@ body {
 
 .active {
   pointer-events: none;
-  
-  border: 1px solid red;
+  border: 3px solid rgb(179, 86, 86);
 }
 
 
@@ -59,3 +70,45 @@ todo : 카드 뒤집기
         hover 상태 꾸미기
         전체적으로 디자인
 */
+.btn-box {
+  display: flex;
+  
+}
+
+.count-btn {
+  font-size: 16px;
+  padding: 5px 15px;
+  margin-right: 15px;
+  
+  border-radius: 8px;
+  background-color: #FD8A8A;
+  color: #fff;
+  font-weight: bold;
+
+  box-shadow: 0 1px 1px rgba(0,0,0,0.15), 
+              0 2px 2px rgba(0,0,0,0.15), 
+              0 4px 4px rgba(0,0,0,0.15), 
+              0 8px 8px rgba(0,0,0,0.15);
+
+  cursor: pointer;
+}
+
+#reset {
+  font-size: 16px;
+  padding: 5px 15px;
+  
+  border-radius: 8px;
+  border: none;
+  background-color: #b84545;
+  color: #fff;
+  font-weight: bold;
+
+  box-shadow: 0 1px 1px rgba(0,0,0,0.15), 
+              0 2px 2px rgba(0,0,0,0.15), 
+              0 4px 4px rgba(0,0,0,0.15), 
+              0 8px 8px rgba(0,0,0,0.15);
+
+  cursor: pointer;
+
+  margin-left: auto;
+}
